# InvestUp

./: .gitignore  db.sqlite3  pyproject.toml
companies/: admin.py  forms.py  modelChoices.py  models.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_rename_desc_company_description.py  0003_alter_company_existence_time_and_more.py  0004_remove_company_targe_audience_and_more.py  0005_alter_company_target_audience.py  0006_rename_last_date_caption_company_last_date_capture.py  0007_company_slug.py  0008_alter_company_slug.py  0009_alter_company_logo_document.py  0010_attachdocument_delete_document.py  0011_metrics.py  0012_alter_metrics_value.py  0013_alter_company_user.py  0014_notifications.py  0015_alter_notifications_date.py  0016_alter_notifications_date.py  0017_alter_notifications_date.py  0018_alter_notifications_date.py
core/: settings.py  urls.py
docs/: README.md
investors/: admin.py  models.py  urls.py  views.py
investors/migrations/: 0001_initial.py  0002_investmentproposal_slug.py  0003_remove_investmentproposal_slug.py  0004_investmentproposal_proposal_token.py  0005_alter_investmentproposal_proposal_token.py
secrets/: .env
staticfiles/css/: general.css
staticfiles/css/users/: users.css
templates/bases/: base.html
templates/companies/: my.html  new.html  see.html  show.html
templates/investors/: see.html  sign_contract.html  sugest.html
templates/partials/: form_error.html  messages.html  nav.html
templates/registration/: login.html  profile.html  reset_password.html  signup.html
users/: forms.py  urls.py  views.py
(+1 files in other folders)
